# Content-Identifier

./: .env  .gitignore  Notes.md  README.md  main.py  pyproject.toml
data/test/: eval_set_full.jsonl  synthetic_eval.jsonl  synthetic_eval_benign.jsonl  synthetic_eval_harm.jsonl
data/train/: val_sampled.csv
docs/: Approach and Thought Process.md  Dataset Generation Report.md  Gemma Training Report for Content Identifier.md  RoBERTa Training Report for Content Identifier.md
logs/experiments/: gemma-training-run-01.csv
logs/experiments/gemma/: gemma-training-run-02.csv
logs/experiments/roberta/: roberta-training-run-01.csv  roberta-training-run-02.csv
logs/metrics/: roberta-metrics.json
logs/metrics/gemma/: gemma-metrics-01.json  gemma-metrics-02.json
logs/metrics/roberta/: roberta-metrics-02.json
logs/outputs/: sample_predictions_gemma.csv  sample_predictions_roberta.csv  test_predictions_roberta.csv
logs/outputs/gemma/: test_predictions_gemma-01.csv  test_predictions_gemma-02.csv
logs/outputs/roberta/: test_predictions_roberta-02.csv
scripts/: data_gen.ipynb  data_processing.ipynb  eval_data_generator.ipynb  model_evaluation.ipynb  model_evaluation_gemma.ipynb  model_evaluation_roberta.ipynb  model_inferencing.ipynb  model_trainer.ipynb  model_trainer_gemma.ipynb  model_trainer_lm.ipynb  model_trainer_ml.ipynb  model_trainer_roberta.ipynb  train_data_generator.ipynb
utils/: gpu_verify.py  sample_predictions.ipynb  system_instr.txt
