[project]
name = "content-id"
version = "0.1.0"
description = "A take home task for Gray Swan AI to build a content detection model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.6.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.4.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]
